[package]
name = "arpabet"
description = "A library for builing text to speech applications."
version = "2.0.0"
keywords = [ "TTS", "text", "speech", "CMU", "cmudict" ]
authors = ["Brandon Thomas <bt@brand.io>",
           "Brandon Thomas <echelon@gmail.com>"]
license = "BSD-4-Clause"
repository = "https://github.com/echelon/arpabet.rs"
documentation = "https://docs.rs/arpabet"

[dependencies]
arpabet_cmudict = { version = "2.0.0", optional = false, path = "../arpabet_cmudict" }
arpabet_parser = { version = "2.0.0", optional = false, path = "../arpabet_parser" }
arpabet_types = { version = "2.0.0", optional = false, path = "../arpabet_types" }

[badges]
travis-ci = { repository = "echelon/arpabet.rs" }
